@@ -18,10 +18,11 @@ package org.labkey.protein;
 
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-import org.labkey.api.annotations.Migrate;
 import org.labkey.api.data.Container;
 import org.labkey.api.data.ContainerManager;
 import org.labkey.api.data.TableSelector;
+import org.labkey.api.files.FileContentService;
+import org.labkey.api.files.TableUpdaterFileListener;
 import org.labkey.api.module.DefaultModule;
 import org.labkey.api.module.ModuleContext;
 import org.labkey.api.pipeline.PipelineService;
@@ -40,7 +41,6 @@ import org.labkey.api.view.WebPartFactory;
 import org.labkey.api.view.WebPartView;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
@@ -56,11 +56,10 @@ public class ProteinModule extends DefaultModule
         return NAME;
     }
 
-    @Migrate
     @Override
     public @Nullable Double getSchemaVersion()
     {
-        return 0.000; // TODO: Switch to 24.000 once prot scripts move here
+        return 24.000;
     }
 
     @Override
@@ -92,10 +91,7 @@ public class ProteinModule extends DefaultModule
     @Override
     protected void init()
     {
-        // TODO: Merge with protein controller
-        addController("annot", AnnotController.class);
         addController("protein", ProteinController.class);
-
         ProteinUserSchema.register(this);
         CustomAnnotationSchema.register(this);
         ProteinService.setInstance(new ProteinServiceImpl());
@@ -108,7 +104,14 @@ public class ProteinModule extends DefaultModule
         PipelineService service = PipelineService.get();
         service.registerPipelineProvider(new ProteinAnnotationPipelineProvider(this));
         UsageMetricsService.get().registerUsageMetrics(getName(), () -> Map.of("hasGeneOntologyData", new TableSelector(ProteinSchema.getTableInfoGoTerm()).exists()));
-        AnnotController.registerAdminConsoleLinks();
+        ProteinController.registerAdminConsoleLinks();
+
+        FileContentService fcs = FileContentService.get();
+        if (fcs != null)
+        {
+            fcs.addFileListener(new TableUpdaterFileListener(ProteinSchema.getTableInfoAnnotInsertions(), "FileName", TableUpdaterFileListener.Type.filePath, "InsertId"));
+            fcs.addFileListener(new TableUpdaterFileListener(ProteinSchema.getTableInfoFastaFiles(), "FileName", TableUpdaterFileListener.Type.filePath, "FastaId"));
+        }
     }
 
     @Override
@@ -124,20 +127,18 @@ public class ProteinModule extends DefaultModule
         return list;
     }
 
-    @Migrate
     @Override
     @NotNull
     public Set<String> getSchemaNames()
     {
-        // TODO: Switch to "prot" when scripts move
-        return Collections.emptySet();
+        return Set.of(ProteinSchema.getSchemaName());
     }
 
     @Override
     public @NotNull Set<Class> getIntegrationTests()
     {
         return Set.of(
-            AnnotController.TestCase.class
+            ProteinController.TestCase.class
         );
     }
 
